k8s/license-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license-server
  namespace: prisma-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: license-server
  template:
    metadata:
      labels:
        app: license-server
    spec:
      containers:
        - name: license-server
          image: prisma-web/license-server:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: license-server
  namespace: prisma-web
spec:
  selector:
    app: license-server
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
